hard-gists/930276/run.log
=== Docker Run Log for 930276 ===
Started at: Mi 29. Okt 18:22:50 CET 2025

[2025-10-29 18:22:50] START: Running container for 930276
[2025-10-29 18:22:50] SUCCESS: Container 2037b702b52ac568985778040082f2592823ac7da5b3e5d860cf4bc4737195ec started for 930276
=== Container logs for 930276 ===
  File "/snippet.py", line 34
    print size
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 930276 ===
[2025-10-29 18:22:52] INFO: Container 2037b702b52ac568985778040082f2592823ac7da5b3e5d860cf4bc4737195ec has stopped
